--- a/docs/todo.txt
+++ b/docs/todo.txt
@@ -2,8 +2,10 @@ Currently:
   - Big refactor to class-based approach
       - Create new classes
       - Make initial Flask declaration outside View
+      - Store uid with view rather than having to pass it in (each user gets their own view anyways)
       - Local emit rooms
       - Pass through chatGPT
+      - Getting tests running
     - Refactor state into a class?
     - Make View class not depend on Game or State? (pass in information as needed)
     - Unit tests for addressing and such
@@ -12,9 +14,7 @@ Currently:
     - Reorganize imports
     - Clean up story loading
     - Clean up project directory organization
-    - Store uid with view rather than having to pass it in (each user gets their own view anyways)
     - Make view's web_state just a web_state rather than dictionary of uid to web_state (we already have the dictionary in the __main__ layer)
-
 
   - Make requirements not met different color? Maybe bolded and red yeah
   - Implementing view print messages
@@ -54,6 +54,11 @@ Big Todo:
   - UI
 
 
+235. Ability for var locales to be keywords
+234. Make CLI view ignore keyword brackets
+233. Allow keywords to have custom text
+232. Parse-time keyword checking
+231. Keyword support (right now just you can hover for more info in tooltips?)
 230. Apparently, __builtins__ is a module on some platforms, leading to an error in gameparser.py, fix!
 229. Make f-strings in view.py less complex?
 228. Add thread-safety to state (or maybe just state["command_buffer"])
