Make game not completely broken

--- a/docs/changelog
+++ b/docs/changelog
@@ -1,3 +1,11 @@
+2025/06/20
+- Fixing a bunch of things from optimizations, streaming
+- Fixed text disappearing on reloads
+- Fixed broken view commands
+
+2025/06/19
+- Story planning
+
 2025/06/17
 - Worked on story planning
 
